# libinfalcon

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md
apps/: CMakeLists.txt
apps/falcon_client/: falcon_client.cpp
apps/falcon_practice/: falcon_practice.cpp  falcon_practice.h  util.h
apps/test_falcon_connection/: test_falcon_connection.cpp  test_falcon_connection.h  util.cpp
apps/test_falcon_impedance/: test_falcon_impedance.cpp
apps/util/: util.cpp  util.h
examples/: CMakeLists.txt
examples/cartesian_coords/: cartesian_coords.cpp
examples/displacement_based_force/: diplacement_based_force.cpp  displacement_based_force.cpp  displacement_based_force.h  util.cpp
examples/falcon_json/: falcon_json.cpp  falcon_json.h  util.h
examples/findfalcons/: findfalcons.cpp
examples/findfalcons_multi/: findfalcons_multi.cpp
examples/pd_controller/: pd_controller.cpp  util.cpp  util.h
examples/pid_controller/: pid_controller.h  util.h
util/: util.cpp  util.h
